<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:visibility="visible">

    <TextView
        android:id="@+id/textView"
        android:layout_width="412dp"
        android:layout_height="81dp"
        android:layout_marginTop="28dp"
        android:text="@string/store_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="58sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/store_name" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:ems="20"
        android:fontFamily="sans-serif-light"
        android:hint="@string/edit_password"
        android:inputType="textPassword"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        tools:text="@string/edit_password"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/edit_email"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="@string/edit_email" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="125dp"
        android:layout_height="21dp"
        android:layout_marginTop="24dp"
        android:text="Register"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="259dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/shopify_color"
        android:text="LOGIN"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>